<resources>
    <string name="app_name">wooHoo</string>
    <string name="assistant_text">Home AI Assistant</string>
    <string name="choose_username">Choose a Username for WooHoo</string>
    <string name="username_hint">username</string>
    <string name="existing_account_text">Already have an account?</string>
    <string name="username_taken">abc@woohoo.com is taken. Try another.</string>
    <string name="next">Next</string>
    <string name="create_password">Create Password</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_login_details">Forgot your Login Details?</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

    <string name="username_error">is Taken. Try another.</string>
    <string name="last_name">Last Name</string>
    <string name="alert_box_title">Wrong Combination!</string>
    <string name="alert_message">The email address and password \ncombination you entered is wrong.</string>
    <string name="try_again">Try Again!</string>
</resources>
