<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ahextech.woohoo.signup.SignUpActivity">

    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/group" />

    <TextView
        android:id="@+id/tv_home_assistant"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/assistant_text"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_choose_username"
        android:layout_width="250dp"
        android:layout_height="19dp"
        android:layout_below="@id/tv_home_assistant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/choose_username"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_choose_username"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.55"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/username_hint"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.45"
            android:gravity="start"
            android:paddingLeft="3dp"
            android:text="\@wohoo.com"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_choose_username"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pwd_creation_bg"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.95"
            android:background="@null"
            android:gravity="start"
            android:hint="Enter password"
            android:paddingLeft="30dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#b3b3b3"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/eye"
            android:gravity="start"
            android:paddingLeft="3dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_username_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_layout"
        android:layout_alignStart="@+id/username_layout"
        android:layout_below="@+id/username_layout"
        android:layout_marginTop="12dp"
        android:text="@string/username_taken"
        android:textColor="#ffadb7"
        android:textSize="15sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/layout_btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/tv_username_error"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg">

        <TextView
            android:id="@+id/tv_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:textColor="#b3b3b3"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp"
            android:text="@string/existing_account_text"
            android:textColor="#b3b3b3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="65dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
